# KPiX-Analysis

./: .gitignore  CMakeLists.txt  init.sh  suggestion.txt
core/: CMakeLists.txt
core/include/: KpixSample.h  PacMan.h  TBFunctions.h  clustr.h  euDataRead.h  rawData.h
core/src/: KpixEvent.cpp  KpixSample.cpp  PacMan.cpp  TBFunctions.cpp  YmlVariables.cpp  clustr.cpp  euDataRead.cpp  rawData.cpp
data/: calib_HG_20190710T24.csv  calib_HG_201907T24.csv  plane_Geo_default.txt
include/: extraRooFuncs.h  ntupleMaker.h  testbeam201905_noise_mask.h  testbeam201907_noise_mask.h
macros/: README.md  StandardPlotter.cxx  run_gxx.sh
macros/rooMacros/: AtlasLabels.C  AtlasLabels_C.d  AtlasLabels_C_ACLiC_dict_rdict.pcm  AtlasStyle.C
python/: EtaAnalysis.py  PrintSlopeData.py  README.md  align_xml.py  channel_disabler.py  channel_disabler_newer.py  ecal_mapping.py  filter_events.py  input_compare.py  interpret_dieter.py  missing_track_compare.py  plot_claus.py  plot_curve_res.py  plot_efficiency.py  plot_mom.py  plot_on_track.py  plot_producer.py  plot_producer_new.py  plot_res.py  plot_segment.py  plot_track_hits.py  plot_track_hits_GBL.py  plot_track_hits_new.py  plot_triplet_res.py  postGBLAnalysis.py  pyroot_functions.py  strip_mapping.py  subtract_producer.py  syncData.py  tree_plot.py
scripts/: cluster.sh  tb022019_calib_analyse.sh
scripts/tb201905/: calib_plots_script.sh  ext_analyse_script.sh  ext_plots_script.sh  selfTrig_analyse_script.sh  selfTrig_plots_script.sh
scripts/thesis/: plot_redone.sh
src/: analysis.cxx  analysisExternal.cxx  analysisExternal_tree.cxx  analysisLite.cxx  analysis_newdaq.cxx  analysis_rework.cxx  calibrationFitter.cxx  checkTimeVars.cxx  cluster_analysis.cxx  cluster_analysis_Lite.cxx  cluster_analysis_step2.cxx  count.cxx  ext_trig_debug.cxx  external_trig_debug.cxx  new_CalibrationFitter.cxx  new_analysis.cxx  new_cluster_analysis.cxx  noise_analysis.cxx  noise_tree.cxx  pedestal.cxx  pedestal_tree.cxx  printDat.cxx  splitFile.cxx  ymlCalibrationFitter.cxx
test/: ntupleTest.cxx  ymlHandler.cxx
